--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch a Sketch</title>
-    <script src="style.css"></script>
+    <style src="style.css"></style>
 </head>
 <body>
-    <div class="container"> </div>
+    <div class="container"> 
+    </div>
 
     <script src="./javascript.js"> </script>
 </body>
