--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Etch a Sketch</title>
     <link rel="stylesheet" href="./style.css">
 </head>
-<body>
+<body class = 'body'>
+    <button class="gridSize">Grid Size</button>
     <div class="container"> 
     </div>
 
