Change CSS styling

--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body class = 'body'>
-    <button class="gridSize">Grid Size</button>
-    <div class="container"> 
+    <div class="top"> 
+        <h1> Etch - a - Sketch </h1>
+    </div>
+    <div class='middle'>
+        <div class="buttons">
+            <button class="gridSize">Change Grid Size</button>
+        </div>
+        <div class="container"> </div>
     </div>
 
     <script src="./javascript.js"> </script>
