Add toggle button to turn grid line on or off

--- a/index.html
+++ b/index.html
@@ -13,7 +13,18 @@
     </div>
     <div class='middle'>
         <div class="buttons">
-            <button class="gridSize">Change Grid Size</button>
+            <div>
+                <p> Grid Size </p>
+                <button class="gridSize">Change</button>
+            </div>
+            <div>
+                <p>Grid Line</p>
+                <input id="line" type="button" value="OFF" onclick="gridLine();">
+            </div>
+            <div>
+                <p>Brushes</p>
+                <button class="eraserButton">Eraser</button>
+            </div>
         </div>
         <div class="container"> </div>
     </div>
