Add black paint brush button

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <div>
                 <p>Brushes</p>
                 <button class="eraserButton">Eraser</button>
+                <button class="blackBrushButton"> Black Brush</button>
             </div>
         </div>
         <div class="container"> </div>
