Implement rainbow color paint brush button

--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
             </div>
             <div>
                 <p>Brushes</p>
-                <button class="eraserButton">Eraser</button>
-                <button class="blackBrushButton"> Black Brush</button>
+                <p>
+                    <button class="eraserButton">Eraser</button>
+                    <button class="blackBrushButton"> Black Brush</button>
+                    <button class="rainbowBrushButton">Rainbow Brush</button>
+                </p>
             </div>
         </div>
         <div class="container"> </div>
