Implement function to clear sketchpad

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
                 <input id="line" type="button" value="OFF" onclick="gridLine();">
             </div>
             <div>
+                <p>Clear Sketchpad</p>
+                <button class="clearSketchButton"> Clear Sketchpad</button>
+            </div>
+            <div>
                 <p>Brushes</p>
                 <p>
                     <button class="eraserButton">Eraser</button>
