--- a/index.html
+++ b/index.html
@@ -22,21 +22,28 @@
                 <input id="line" type="button" value="OFF" onclick="gridLine();">
             </div>
             <div>
-                <p>Clear Sketchpad</p>
-                <button class="clearSketchButton"> Clear Sketchpad</button>
+                <p>Brushes</p>
+                <span id="brushButtons">
+                    <button class="eraserButton">Eraser</button>
+                    <button class="blackBrushButton"> Black</button>
+                    <button class="rainbowBrushButton">Rainbow</button>
+                </span>
             </div>
             <div>
-                <p>Brushes</p>
-                <p>
-                    <button class="eraserButton">Eraser</button>
-                    <button class="blackBrushButton"> Black Brush</button>
-                    <button class="rainbowBrushButton">Rainbow Brush</button>
-                </p>
+
+            </div>
+            <div>
+
+            </div>
+            <div>
+                <button class="clearSketchButton"> Clear Pad</button>
             </div>
         </div>
         <div class="container"> </div>
     </div>
-
+    <div class="bottom">
+        <p>Copyright © 2023 mykieunguyen</p>
+    </div>
     <script src="./javascript.js"> </script>
 </body>
 </html>
