--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body class = 'body'>
     <div class="top"> 
-        <h1> Etch - a - Sketch </h1>
+        <h1 id="title"> Etch - a - Sketch </h1>
+        <h3 class="instructions" > Sketch to your heart's desires. Hover to start</h3>
     </div>
     <div class='middle'>
         <div class="buttons">
